<resources>
    <string name="app_name">UrbanDictionary</string>
    <string name="search_term">Search Term</string>
    <string name="button_search">Search</string>
    <string name="no_results">No results</string>
    <string name="result_count">Results: %1$d</string>
    <string name="no_result_count">Results: None</string>

    <string name="definition_date">Date: %1$s</string>
    <string name="definition_author">Author: %1$s</string>
    <string name="definition_examples">Examples:\n%1$s</string>
    <string name="sort_by">Sort By:</string>
    <string name="sort_thumbs_up">sort Thumbs Up</string>
    <string name="sort_thumbs_down">sort Thumbs Down</string>
</resources>
